weekend-of-debug/envoy-docker-bigbang-worked/envoy-ironbank.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: reflect-project
                            max_grpc_timeout: 0s
                      cors:
                        allow_origin_string_match:
                        - safe_regex:
                            google_re2: {}
                            regex: \*
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: authorization,x-grpc-web,grpc-timeout,keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-reflect-appid
                        max_age: "1728000"
                        expose_headers: grpc-status,grpc-message
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: reflect-project
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      # For local development on Windows, set `address` to `host.docker.internal` if the Project Server
      # is not running inside Docker
      #hosts: [{ socket_address: { address: host.docker.internal, port_value: 10010 }}]
      hosts: [{ socket_address: { address: $upstream_name, port_value: 10010 }}]
